fixed cropping issue on last image

--- a/css/index.scss
+++ b/css/index.scss
@@ -292,7 +292,12 @@ nav ul li {
     margin-left: 117px;
 }
 
-
+.backpackimg {
+    max-width: 320px;
+    width: 100%;
+    min-height: 284px;
+    object-fit: contain;
+}
 
 
 // .grid1 {
